--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -99,7 +99,7 @@ i.fa-external-link-alt {
 
 #page-footer {
   position: relative;
-  z-index: 5;
+  z-index: 1000;
   background-color: $site-color-footer;
   padding: 32px;
 
@@ -193,7 +193,7 @@ i.fa-external-link-alt {
   margin-left: 20px;
   padding-right: 10px;
   cursor: pointer;
-  z-index: 9999;
+  z-index: 100;
 
   i {
     font-size: 32px;
@@ -842,7 +842,7 @@ body.obsolete {
     min-width: 300px;
     max-width: calc(100vw - 60px);
     background: #fff;
-    z-index: 9999;
+    z-index: 100;
     box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
     transform: translateX(-100%);
     transition: transform 0.4s ease-in-out;
@@ -864,7 +864,7 @@ body.obsolete {
       top: 0; bottom: 0;
       left: 0; right: 0;
       height: 100%;
-      z-index: 999;
+      z-index: 5;
       background-color: rgba($gray-base,0.5);
       cursor: pointer;
       pointer-events: none;
